# lightdm-startos-greeter-1

./: Makefile.in  README  config.status  configure  configure.ac  libtool
data/: Makefile.am  Makefile.in  lightdm-startos-greeter.conf  lightdm-startos-greeter.desktop.in  lightdm-ylmfos-greeter.desktop.in
po/: POTFILES  POTFILES.in  lightdm-startos-greeter.pot  lightdm-ylmfos-greeter.pot  zh_CN.po
src/: .gtksysmenu.c.swp  .ui.c.swp  .ui.h.swp  C_MACRO  Makefile.am  Makefile.in  backend.c  backend.h  config.h  gtkloginbox.c  gtkloginbox.h  gtkprompt.c  gtkprompt.h  gtksysmenu.c  gtksysmenu.h  gtkuserface.c  main.c  ui.c  ui.h
y-greeter/: Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
y-greeter/data/: Makefile.am  Makefile.in  y-greeter.conf  y-greeter.desktop  y-greeter.desktop.in
y-greeter/po/: y-greeter.pot  zh_CN.po
y-greeter/src/: C_MACRO  Makefile.am  Makefile.in  backend.c  backend.h  gtkclock.c  gtkloginbox.c  gtkloginbox.h  gtkprompt.c  gtksysmenu.c  gtksysmenu.h  gtkuserface.c  gtkuserface.h  main.c  ui.c  ui.h
ylmf/src/: backend.c  backend.h  config.h  gtkclock.c  gtkclock.h  gtkprompt.c  gtksysmenu.c  gtkuserface.h  main.c  ui.c  ui.h
