greeterdatadir = $(datadir)/y-greeter

imagedir = $(greeterdatadir)
dist_image_DATA = \
	defaultface.png \
	internation.png \
	keyboard.png \
	language.png \
	power.png \
	session.png \
	shutdown.png

configdir = $(sysconfdir)/lightdm
dist_config_DATA = y-greeter.conf

xgreetersdir = $(datadir)/xgreeters
dist_xgreeters_DATA = y-greeter.desktop

DISTCLEANFILES = \
	Makefile.in
